--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "newsletter-signup",
   "version": "1.0.0",
-  "description": "",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -16,5 +15,15 @@
   },
   "engines": {
     "node": "14.x"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ROwolf088/NewsLetter.git"
+  },
+  "bugs": {
+    "url": "https://github.com/ROwolf088/NewsLetter/issues"
+  },
+  "homepage": "https://github.com/ROwolf088/NewsLetter#readme",
+  "description": ""
 }
