--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
+    "start": "node app.js",
+    "kick": "nodemon app.js"
   },
   "author": "",
   "license": "ISC",
@@ -16,7 +17,9 @@
   "engines": {
     "node": "14.x"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "nodemon": "^2.0.7"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/ROwolf088/NewsLetter.git"
